[package]
name = "backblaze_exporter"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8", features = ["tracing", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.39", features = ["serialize"] }
prometheus-client = "0.24"
